[package]
name = "packet-sniffer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.6", features = ["derive"] }
#libpcap = {version = "0.1.7"}
pcap = {version = "0.10.1"}
#etherparse = "0.12.0"
pktparse = "0.7.1"
libc = "0.2.132"